--- a/test/index.html
+++ b/test/index.html
@@ -16,24 +16,21 @@
 	<script type="text/javascript" src="./test_system.js"></script>
 	<script type="text/javascript" src="./test_example.js"></script>
 
-	<script type="text/javascript" src="./test_en_casual.js"></script>
-	<script type="text/javascript" src="./test_en_deadline.js"></script>
-	<script type="text/javascript" src="./test_en_inter_std.js"></script>
-	<script type="text/javascript" src="./test_en_little_endian.js"></script>
-	<script type="text/javascript" src="./test_en_middle_endian.js"></script>
-	<script type="text/javascript" src="./test_en_month.js"></script>
-	<script type="text/javascript" src="./test_en_slash.js"></script>
-	<script type="text/javascript" src="./test_en_time_ago.js"></script>
-	<script type="text/javascript" src="./test_en_time_exp.js"></script>
-	<script type="text/javascript" src="./test_en_weekday.js"></script>
+	<script type="text/javascript" src="./test_es_casual.js"></script>
+	<script type="text/javascript" src="./test_es_dash.js"></script>
+	<script type="text/javascript" src="./test_es_deadline.js"></script>
+	<script type="text/javascript" src="./test_es_little_endian.js"></script>
+	<script type="text/javascript" src="./test_es_slash.js"></script>
+	<script type="text/javascript" src="./test_es_time_ago.js"></script>
+	<script type="text/javascript" src="./test_es_time_exp.js"></script>
 
-	<script type="text/javascript" src="./test_jp_casual.js"></script>
+	<!--<script type="text/javascript" src="./test_jp_casual.js"></script>
 	<script type="text/javascript" src="./test_jp_standard.js"></script>
 
 	<script type="text/javascript" src="./test_fr_casual.js"></script>
 	<script type="text/javascript" src="./test_fr_slash.js"></script>
 	<script type="text/javascript" src="./test_fr_time_exp.js"></script>
-	<script type="text/javascript" src="./test_fr_weekday.js"></script>
+	<script type="text/javascript" src="./test_fr_weekday.js"></script>-->
 </head>
 <body>
     <h1 id="qunit-header">QUnit Test Suite</h1>
